--- a/index.css
+++ b/index.css
@@ -10,6 +10,43 @@ body
     text-indent: 1em;
 }
 
+.pl-0
+{
+    padding-left: 0 !important;
+}
+
+.pr-0
+{
+    padding-right: 0 !important;
+}
+
+.auto-fade
+{
+    transition: border-color 400ms ease-out, color 400ms ease-out, background-color 400ms ease-out, opacity 400ms ease-out;
+}
+
+div#back-to-top
+{
+    position: fixed;
+    inset: auto 0px 0px auto;
+    border-top: 10px solid #bdc3c7;
+    border-left: 10px solid #bdc3c7;
+    background-color: #ecf0f1;
+    width: 75px;
+    height: 75px;
+    border-radius: 50px 0px 0px 0px;
+    color: #000;
+    opacity: 0.5;
+}
+
+div#back-to-top:hover
+{
+    border-top: 10px solid #00b894;
+    border-left: 10px solid #00b894;
+    background-color: #55efc4;
+    opacity: 1;
+}
+
 div#introduction
 {
     background-color: #3498db;
@@ -41,24 +78,24 @@ div#opening-statement:hover
 
 div#toc
 {
-    border-bottom: 10px solid #8e44ad;
-    background-color: #9b59b6;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
-ul#toc > li
+ul.toc-list > a > li
 {
-    border-left: 10px solid #9b59b6;
+    border-left: 10px solid #3498db;
     border-bottom: none;
     background-color: #ecf0f1;
     cursor: pointer;
 }
 
-ul#toc > li:hover
+ul.toc-list > a > li:hover
 {
-    border-left: 10px solid #8e44ad;
+    border-left: 10px solid #2980b9;
     background-color: #bdc3c7;
-    color: #9b59b6;
+    color: #3498db;
 }
 
 div#about-me
@@ -88,7 +125,64 @@ div#work-experience
     color: #fff;
 }
 
-div.card
+div#work-experience-cards > div.card
 {
     border-radius: 0px;
+    border-left: 10px solid #bdc3c7;
+}
+
+div#work-experience-cards > div.card:hover
+{
+    border-left: 10px solid #1abc9c;
+}
+
+div#work-experience-cards > div.card > div.card-body > h3.card-title
+{
+    border-bottom: 1px solid #bdc3c7;
+    padding-bottom: 0.25em;
+}
+
+div#projects
+{
+    border-bottom: 10px solid #00cec9;
+    background-color: #81ecec;
+    color: #fff;
+}
+
+
+
+
+div#skills
+{
+    border-bottom: 10px solid #27ae60;
+    background-color: #2ecc71;
+    color: #fff;
+}
+
+div#education
+{
+    border-bottom: 10px solid #f39c12;
+    background-color: #f1c40f;
+    color: #fff;
+}
+
+div#publications
+{
+    border-bottom: 10px solid #d35400;
+    background-color: #e67e22;
+    color: #fff;
+}
+
+div#testimonials
+{
+    border-bottom: 10px solid #c0392b;
+    background-color: #e74c3c;
+    color: #fff;
+}
+
+div#contact
+{
+    border-bottom: 10px solid #8e44ad;
+    background-color: #9b59b6;
+    color: #fff;
 }
