--- a/index.css
+++ b/index.css
@@ -82,20 +82,20 @@ div#opening-statement
 
 div#opening-statement:hover
 {
-    border-left: 10px solid #3498db;
-    border-bottom: 10px solid #3498db;
+    border-left: 10px solid #95a5a6;
+    border-bottom: 10px solid #95a5a6;
 }
 
 div#toc
 {
-    border-bottom: 10px solid #8e44ad;
-    background-color: #9b59b6;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
 ul.toc-list > a > li
 {
-    border-left: 10px solid #9b59b6;
+    border-left: 10px solid #3498db;
     border-bottom: none;
     background-color: #ecf0f1;
     cursor: pointer;
@@ -103,15 +103,15 @@ ul.toc-list > a > li
 
 ul.toc-list > a > li:hover
 {
-    border-left: 10px solid #8e44ad;
+    border-left: 10px solid #2980b9;
     background-color: #bdc3c7;
-    color: #9b59b6;
+    color: #3498db;
 }
 
 div#about-me
 {
-    border-bottom: 10px solid #2c3e50;
-    background-color: #34495e;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -124,14 +124,14 @@ div#about-me-prompt
 
 div#about-me-prompt:hover
 {
-    border-left: 10px solid #34495e;
-    border-bottom: 10px solid #34495e;
+    border-left: 10px solid #95a5a6;
+    border-bottom: 10px solid #95a5a6;
 }
 
 div#work-experience
 {
-    border-bottom: 10px solid #16a085;
-    background-color: #1abc9c;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -144,8 +144,8 @@ div#work-experience-timeline
 
 div#work-experience-timeline:hover
 {
-    border-left: 10px solid #1abc9c;
-    border-bottom: 10px solid #1abc9c;
+    border-left: 10px solid #95a5a6;
+    border-bottom: 10px solid #95a5a6;
 }
 
 div#work-experience-timeline-header
@@ -174,7 +174,7 @@ div#work-experience-timeline > a:last-child
 
 div#work-experience-timeline > a:hover
 {
-    background-color: #1abc9c;
+    background-color: #3498db;
 }
 
 div.card
@@ -189,7 +189,7 @@ div#work-experience-cards > div.card
 
 div#work-experience-cards > div.card:hover
 {
-    border-left: 10px solid #1abc9c;
+    border-left: 10px solid #95a5a6;
 }
 
 div#work-experience-cards > div.card > div.card-body > h3.card-title
@@ -200,8 +200,8 @@ div#work-experience-cards > div.card > div.card-body > h3.card-title
 
 div#projects
 {
-    border-bottom: 10px solid #00cec9;
-    background-color: #81ecec;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -215,7 +215,7 @@ div#projects-container > h2
 
 div#projects-container > h2:hover
 {
-    border-left: 10px solid #81ecec;
+    border-left: 10px solid #95a5a6;
 }
 
 div#projects-container > figure
@@ -244,7 +244,7 @@ div#projects-container > div.description
 
 div#projects-container > div.description:hover
 {
-    border-left: 10px solid #81ecec;
+    border-left: 10px solid #95a5a6;
 }
 
 div#projects-container > div.description > p
@@ -265,8 +265,8 @@ div#projects-container > div.carousel
 
 div#skills
 {
-    border-bottom: 10px solid #27ae60;
-    background-color: #2ecc71;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -278,7 +278,7 @@ div#skills-container
 
 div#skills-container:hover
 {
-    border-left: 10px solid #2ecc71;
+    border-left: 10px solid #95a5a6;
 }
 
 div#skills-container h1
@@ -296,8 +296,8 @@ div#skills-container p
 
 div#education
 {
-    border-bottom: 10px solid #f39c12;
-    background-color: #f1c40f;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -308,13 +308,13 @@ div#education-cards > div.card
 
 div#education-cards > div.card:hover
 {
-    border-left: 10px solid #f1c40f;
+    border-left: 10px solid #95a5a6;
 }
 
 div#publications
 {
-    border-bottom: 10px solid #d35400;
-    background-color: #e67e22;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -325,13 +325,13 @@ div#publication-cards > div.card
 
 div#publication-cards > div.card:hover
 {
-    border-left: 10px solid #e67e22;
+    border-left: 10px solid #95a5a6;
 }
 
 div#testimonials
 {
-    border-bottom: 10px solid #c0392b;
-    background-color: #e74c3c;
+    border-bottom: 10px solid #2980b9;
+    background-color: #3498db;
     color: #fff;
 }
 
@@ -343,7 +343,7 @@ div#testimonial-container
 
 div#testimonial-container:hover
 {
-    border-left: 10px solid #e74c3c;
+    border-left: 10px solid #95a5a6;
 }
 
 div#contact
@@ -361,5 +361,5 @@ div#contact-container
 
 div#contact-container:hover
 {
-    border-left: 10px solid #3498db;
+    border-left: 10px solid #95a5a6;
 }
